Closed Bug 30174 Opened 25 years ago Closed 24 years ago

Mouse wheel does not scroll FTP dirs

Categories

(Core :: DOM: UI Events & Focus Handling, defect, P3)

x86
Linux
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: zuperdee, Assigned: bryner)

References

()

Details

(Keywords: verifyme, Whiteboard: Have Fix (attached))

Attachments

(1 file)

It seems when I try to use the mouse wheel to scroll FTP dirs (on Linux, at
least), it does not scroll.  It does scroll when I move the scrollbar manually. 
Why is this?
Ok, I've confirmed this.  Shooting for M15.
Status: NEW → ASSIGNED
Component: User Interface: Design Feedback → Event Handling
QA Contact: elig → janc
Target Milestone: M15
Attached patch Proposed fixSplinter Review
Whiteboard: Have Fix (attached)
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
If this is fixed, why doesn't it work? (Build ID: 2000021318)

I checked in the fix on March 11.  Your build appears to be from Feb. 13.
Hmm it's my fingers that are old. Tested with 2000031318 - no success.
Tested again with ID: 2000031405 - still no go.
I don't suppose you are getting the nb1b builds...?  The fix would not be in
those.

If not, could you please give some details about your platform and mouse setup? 
Thanks.
Still doesnt work w. 2000031418

RH6, mostly upgraded to a "kinda" 6.1. Logitech wheelmouse. Never had any prob's

with it.

No funny mouse-driver apps (no "imwheel"), only using ordinary setup in

XF86Config: ZAxisMapping 4 5

I use a "fix" for Netscape scrolling, placed in .Xdefaults - found at

http://www.inria.fr/koala/colas/mouse-wheel-scroll/

This, however, adresses Netscape specifically and should not interfere with Mozilla.

Using latest Gnome w. Sawmill. I didn't notice mouse scrolling in the ftp

windows had stopped working till some 5 days ago. Searched bugs and saw a report

- then the fix. The fix never fixed it though. Scrollwheel works everywhere

else, as usual. The scrolling as such in ftp is extremely slow here when

dragging scroll-slider - clicking scrollbar buttons or the scrollbar itself.

This is more likely some refresh problem with the ftp "engine", however, and has

"always" been like that in Mozilla.

I believe the slowness you refer to is because of inefficiencies in the

scrolling of the tree widgets.  That is a totally different bug from this one.

The Netscape folk are supposedly working on improving the efficiency of the tree

widget, however.  BTW, I run RH 6.0 here, with kernel 2.3.49, and the problem

seems to be fixed here.

dark@c2i.net: I am reopening this bug based on your comments.  I'll be checking
in code later today to enable you to log mousewheel debugging information from
the nightly builds (starting with tomorrow's nightly), hopefully that will give
me enough info to get this fixed.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Beginning with the 03-16-2000 M15 builds, you can do the following to generate
mousewheel debugging information:

export NSPR_LOG_MODULES=MOUSEWHEEL:5  (if you use bash), or
setenv NSPR_LOG_MODULES MOUSEWHEEL:5  (if you use tcsh)

Then run mozilla, go to an ftp site, and try to scroll using the mousewheel. 
Please only move the mousewheel one click, and do not use the mousewheel on any
other sites.  Attach your mozilla output to this bug report.

Thanks.
In case this makes any difference, my mouse is a Logitech MouseMan+ (standard

serial version) 4-button mouse, and I am running Red Hat 6.0 with XFree86

v3.3.4.  The scrolling seems pretty good now, actually--at least over here,

anyway.  Here is the log (Of just *ONE* click of the wheel) on my system:



1024[804f7f8]: ------------------------

1024[804f7f8]: GetScrollableFrameOrView: aTargetFrame = 8eb5a38, aView =

8e24e081024[804f7f8]: GetScrollableFrameOrView: mCurrentFocus = NULL

1024[804f7f8]: GetScrollableFrameOrView: Found a SelfScrollingFrame: sf = 8e232c8

1024[804f7f8]: GetScrollableFrameOrView: focusFrame=0, focusView=0

1024[804f7f8]: GetScrollableFrameOrView: No scrolling view, looking for

scrolling frame

1024[804f7f8]: GetScrollableFrameOrView: Found a scrolling frame



One last note from me: The scrolling of long FTP dirs is still rather slow, but
again, I think this problem is not related to this bug at all, because it is
even slow when dragging the scroll bars.  So I think that is a separate bug,
which should be filed and dealt with separately.  But as to the mousewheel
scrolling problem, the bug has been fixed for me.  Brian, could it possibly be
something to do with GFX widgets being on or off?

dark@c2i.net, do you notice anything different from me?  Could it be some other
factor, like your type of mouse, or the X server you are using?
I tested again on a standard build from the 15th (march) and in the beginning

the wheeling now worked and later, revisiting the same site during the same

Seamonkey session - it was dead again.

Kernel 2.2.5-15.

XFree86 RH rpm's 3.3.5-0.6.0

Mouse is half a year, retails as Logitech Pilot+ in Europe and is an original

Logitech wheelmouse (M-C48), not some grey market OEM thing. Never had any probs.

In options "Debug Rendering" of GFX scrollbars is checked. No error messages

appeared. Right now i use nb1b - i'll get a standard M15 leater again today or

tomorrow and run the debug bryner@uiuc.edu described.

OK: Tested again with build ID 2000031708
I reconstructed what i had done earlyer when it stopped working:
I first scrolled - it worked but then thought "dang...this is SLOW.." - then I
dragged the slider to the bottom of the page to speed things up. When the page
had rendered i scrolled the wheel again. Dead.

This is reproducable all the time here.
The output from debugging as described LOOKS ok:
1024[804f8d8]: GetScrollableFrameOrView: aTargetFrame = 875f6e8, aView = 86bfcc0
1024[804f8d8]: GetScrollableFrameOrView: mCurrentFocus = 868fde8
1024[804f8d8]: GetScrollableFrameOrView: focusFrame=86be0d4, focusView=86bfcc0
1024[804f8d8]: GetScrollableFrameOrView: Found a ScrollingView

But the page doesn't move - and the slidebar doesn't move.
So the conclusions is i CAN scroll - if scrolling downwards from top. I can NOT
scroll if scrolling backwards from bottom. And after i attempt the latter - no
scrolling in FTP windows work anymore at all - regardless of a good looking
debug output. Reposistioning the slider with left mousebutton, then waiting for
redrawing to finish - and then testing to scroll again: No effect what so ever.
Scrolling in http windows work fine afterwards, ftp remains dead.
dark@c2i.net:  Reproduced from your description.  Dragging the scrollbar slider
appears to be leaving the scrollbar with focus, which is confusing the
mousewheel code.  Currently looking into solutions.
I'm glad my mouse isn't sick. BTW..vaguely relateda and perhaps sorting under

another bug: I see the keys for pageUp/Down and arrowkeys up/down have no effect

when in ftp.

To regain some sanity in my bug list, I'm going to close this bug as fixed
(since the original bug was in fact fixed) and start a new bug for the problems
after dragging the scrollbar.
Status: REOPENED → RESOLVED
Closed: 25 years ago24 years ago
Resolution: --- → FIXED
Filed bug 32344 on the scrollbar-drag issue.
Keywords: verifyme
Verified fixed (03-21-2000 build).

Status: RESOLVED → VERIFIED
transferring these to my netscape.com email.
Assignee: bryner → bryner
Component: Event Handling → User events and focus handling
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: