Fix bug 30174, mouse wheel does not scroll FTP directories.  r=troy.